--- a/schemas/scoop-manifest.en-US.json
+++ b/schemas/scoop-manifest.en-US.json
@@ -253,7 +253,7 @@
     },
     "url_validation": {
       "pattern": "^https?://",
-      "errorMessage": "It must be a valid http/https URL"
+      "errorMessage": "Require a valid http/https URL"
     },
     "url": {
       "title": "Download URL",
@@ -923,7 +923,7 @@
         "properties": {
           "hash": {
             "$ref": "#/definitions/str",
-            "errorMessage": "The type of 'url' and 'hash' must match"
+            "errorMessage": "The type of 'url' and 'hash' must be same"
           }
         }
       },
@@ -935,7 +935,7 @@
               "$ref": "#/definitions/hash"
             },
             "minItems": 1,
-            "errorMessage": "The type of 'url' and 'hash' must match"
+            "errorMessage": "The type of 'url' and 'hash' must be same"
           }
         }
       }
@@ -1459,6 +1459,170 @@
                       }
                     }
                   }
+                },
+                {
+                  "allOf": [
+                    {
+                      "if": {
+                        "properties": {
+                          "autoupdate": {
+                            "required": ["extract_dir"]
+                          }
+                        }
+                      },
+                      "then": {
+                        "required": ["extract_dir"]
+                      }
+                    },
+                    {
+                      "if": {
+                        "properties": {
+                          "autoupdate": {
+                            "required": ["env_add_path"]
+                          }
+                        }
+                      },
+                      "then": {
+                        "required": ["env_add_path"]
+                      }
+                    },
+                    {
+                      "if": {
+                        "properties": {
+                          "autoupdate": {
+                            "required": ["bin"]
+                          }
+                        }
+                      },
+                      "then": {
+                        "required": ["bin"]
+                      }
+                    },
+                    {
+                      "if": {
+                        "properties": {
+                          "autoupdate": {
+                            "required": ["shortcuts"]
+                          }
+                        }
+                      },
+                      "then": {
+                        "required": ["shortcuts"]
+                      }
+                    },
+                    {
+                      "if": {
+                        "properties": {
+                          "autoupdate": {
+                            "properties": {
+                              "architecture": {
+                                "patternProperties": {
+                                  "^(64bit|arm64|32bit)$": {
+                                    "required": ["extract_dir"]
+                                  }
+                                }
+                              }
+                            }
+                          }
+                        }
+                      },
+                      "then": {
+                        "properties": {
+                          "architecture": {
+                            "patternProperties": {
+                              "^(64bit|arm64|32bit)$": {
+                                "required": ["extract_dir"]
+                              }
+                            }
+                          }
+                        }
+                      }
+                    },
+                    {
+                      "if": {
+                        "properties": {
+                          "autoupdate": {
+                            "properties": {
+                              "architecture": {
+                                "patternProperties": {
+                                  "^(64bit|arm64|32bit)$": {
+                                    "required": ["env_add_path"]
+                                  }
+                                }
+                              }
+                            }
+                          }
+                        }
+                      },
+                      "then": {
+                        "properties": {
+                          "architecture": {
+                            "patternProperties": {
+                              "^(64bit|arm64|32bit)$": {
+                                "required": ["env_add_path"]
+                              }
+                            }
+                          }
+                        }
+                      }
+                    },
+                    {
+                      "if": {
+                        "properties": {
+                          "autoupdate": {
+                            "properties": {
+                              "architecture": {
+                                "patternProperties": {
+                                  "^(64bit|arm64|32bit)$": {
+                                    "required": ["bin"]
+                                  }
+                                }
+                              }
+                            }
+                          }
+                        }
+                      },
+                      "then": {
+                        "properties": {
+                          "architecture": {
+                            "patternProperties": {
+                              "^(64bit|arm64|32bit)$": {
+                                "required": ["bin"]
+                              }
+                            }
+                          }
+                        }
+                      }
+                    },
+                    {
+                      "if": {
+                        "properties": {
+                          "autoupdate": {
+                            "properties": {
+                              "architecture": {
+                                "patternProperties": {
+                                  "^(64bit|arm64|32bit)$": {
+                                    "required": ["shortcuts"]
+                                  }
+                                }
+                              }
+                            }
+                          }
+                        }
+                      },
+                      "then": {
+                        "properties": {
+                          "architecture": {
+                            "patternProperties": {
+                              "^(64bit|arm64|32bit)$": {
+                                "required": ["shortcuts"]
+                              }
+                            }
+                          }
+                        }
+                      }
+                    }
+                  ]
                 }
               ]
             }
