feat: update scoop-manifest

--- a/schemas/scoop-manifest.zh-CN.json
+++ b/schemas/scoop-manifest.zh-CN.json
@@ -616,7 +616,7 @@
     },
     "pre_install": {
       "title": "预安装脚本",
-      "markdownDescription": "- 用于在安装应用程序之前执行命令\n- 执行顺序: `pre_install` -> `installer` -> `post_install`\n\n|可用的变量|说明|\n|:-:|-|\n|`$app`|应用程序名称(应用清单名称)|\n|`$architecture`|CPU 架构, 如: `64bit` `32bit` `arm64`|\n|`$cmd`|当前正在运行的子命令, 如: `uninstall` `update` `install`|\n|`$fname`|下载的文件名(可能是多个文件，需要当做数组处理，除非你确定 url 不是数组)|\n|`$scoopConfig`|Scoop 配置(PowerShell 对象)，如 {SCOOP_BRANCH, SCOOP_REPO}|\n|`$global`|如果安装时使用了 `-g` 或 `--global`，则为 `$true`|\n|`$manifest`|反序列化清单(PowerShell 对象)，如 @{version=1.2.3; description=xxx;...}|\n|`$version`|正在安装的版本，如 1.2.3|\n|`$dir`|应用程序安装目录(实际版本号目录)|\n|`$persist_dir`|数据持久化目录|\n|`$bucketsdir`|Scoop buckets 目录，如 D:\\scoop\\buckets|\n|`$bucket`|当前安装应用所属于的 bucket 名称|\n|`$cachedir`|Scoop cache 目录|\n|`$configFile`|Scoop 配置的路径|\n|`$globaldir`|全局安装目录|\n|`$modulesdir`|Scoop modules 目录|\n|`$original_dir`|应用程序安装目录(实际版本号目录)|\n|`$scoopdir`|Scoop 所在目录|",
+      "markdownDescription": "- 用于在安装应用程序之前执行命令\n- 执行顺序: `pre_install` -> `installer` -> `post_install`\n\n|可用的变量|说明|\n|:-:|-|\n|`$app`|应用程序名称(应用清单名称)|\n|`$architecture`|CPU 架构, 如: `64bit` `32bit` `arm64`|\n|`$cmd`|当前正在运行的子命令, 如: `uninstall` `update` `install`|\n|`$fname`|下载的文件名(可能是多个文件，需要当做数组处理，除非你确定 url 不是数组)|\n|`$scoopConfig`|Scoop 配置(PowerShell 对象)，如 {SCOOP_BRANCH, SCOOP_REPO}|\n|`$global`|如果安装时使用了 `-g` 或 `--global`，则为 `$true`|\n|`$manifest`|反序列化清单(PowerShell 对象)，如 @{version=1.2.3; description=xxx;...}|\n|`$version`|正在安装的版本，如 1.2.3|\n|`$dir`|应用程序安装目录(实际版本号目录)|\n|`$persist_dir`|数据持久化目录|\n|`$bucketsdir`|Scoop buckets 目录，如 D:\\scoop\\buckets|\n|`$bucket`|当前安装应用所属于的 bucket 名称|\n|`$cachedir`|Scoop cache 目录|\n|`$configFile`|Scoop 配置的路径|\n|`$globaldir`|全局安装目录|\n|`$original_dir`|应用程序安装目录(实际版本号目录)|\n|`$scoopdir`|Scoop 所在目录|",
       "$ref": "#/definitions/string_or_string_array"
     },
     "installer": {
@@ -651,12 +651,12 @@
     },
     "post_install": {
       "title": "后安装脚本",
-      "markdownDescription": "- 用于在安装应用程序之后执行命令\n- 执行顺序: `pre_install` -> `installer` -> `post_install`\n- 需要注意，此时 Scoop 已经完成 persist，因此如果需要创建文件用于 persist, 需要在 `pre_install` 中提前定义\n\n|可用的变量|说明|\n|:-:|-|\n|`$app`|应用程序名称(应用清单名称)|\n|`$architecture`|CPU 架构, 如: `64bit` `32bit` `arm64`|\n|`$cmd`|当前正在运行的子命令, 如: `uninstall` `update` `install`|\n|`$fname`|下载的文件名(可能是多个文件，需要当做数组处理，除非你确定 url 不是数组)|\n|`$scoopConfig`|Scoop 配置(PowerShell 对象)，如 {SCOOP_BRANCH, SCOOP_REPO}|\n|`$global`|如果安装时使用了 `-g` 或 `--global`，则为 `$true`|\n|`$manifest`|反序列化清单(PowerShell 对象)，如 @{version=1.2.3; description=xxx;...}|\n|`$version`|正在安装的版本，如 1.2.3|\n|`$dir`|应用程序安装目录(current 目录)|\n|`$persist_dir`|数据持久化目录|\n|`$bucketsdir`|Scoop buckets 目录，如 D:\\scoop\\buckets|\n|`$bucket`|当前安装应用所属于的 bucket 名称|\n|`$cachedir`|Scoop cache 目录|\n|`$configFile`|Scoop 配置的路径|\n|`$globaldir`|全局安装目录|\n|`$modulesdir`|Scoop modules 目录|\n|`$original_dir`|应用程序安装目录(实际版本号目录)|\n|`$scoopdir`|Scoop 所在目录|",
+      "markdownDescription": "- 用于在安装应用程序之后执行命令\n- 执行顺序: `pre_install` -> `installer` -> `post_install`\n- 需要注意，此时 Scoop 已经完成 persist，因此如果需要创建文件用于 persist, 需要在 `pre_install` 中提前定义\n\n|可用的变量|说明|\n|:-:|-|\n|`$app`|应用程序名称(应用清单名称)|\n|`$architecture`|CPU 架构, 如: `64bit` `32bit` `arm64`|\n|`$cmd`|当前正在运行的子命令, 如: `uninstall` `update` `install`|\n|`$fname`|下载的文件名(可能是多个文件，需要当做数组处理，除非你确定 url 不是数组)|\n|`$scoopConfig`|Scoop 配置(PowerShell 对象)，如 {SCOOP_BRANCH, SCOOP_REPO}|\n|`$global`|如果安装时使用了 `-g` 或 `--global`，则为 `$true`|\n|`$manifest`|反序列化清单(PowerShell 对象)，如 @{version=1.2.3; description=xxx;...}|\n|`$version`|正在安装的版本，如 1.2.3|\n|`$dir`|应用程序安装目录(current 目录)|\n|`$persist_dir`|数据持久化目录|\n|`$bucketsdir`|Scoop buckets 目录，如 D:\\scoop\\buckets|\n|`$bucket`|当前安装应用所属于的 bucket 名称|\n|`$cachedir`|Scoop cache 目录|\n|`$configFile`|Scoop 配置的路径|\n|`$globaldir`|全局安装目录|\n|`$original_dir`|应用程序安装目录(实际版本号目录)|\n|`$scoopdir`|Scoop 所在目录|",
       "$ref": "#/definitions/string_or_string_array"
     },
     "pre_uninstall": {
       "title": "预卸载脚本",
-      "markdownDescription": "- 用于在卸载应用程序之前执行命令\n- 执行顺序: `pre_uninstall` -> `uninstaller` -> `post_uninstall`\n\n|可用的变量|说明|\n|:-:|-|\n|`$app`|应用程序名称(应用清单名称)|\n|`$architecture`|CPU 架构, 如: `64bit` `32bit` `arm64`|\n|`$cmd`|当前正在运行的子命令, 如: `uninstall` `update` `install`|\n|`$fname`|下载的文件名(可能是多个文件，需要当做数组处理，除非你确定 url 不是数组)|\n|`$scoopConfig`|Scoop 配置(PowerShell 对象)，如 {SCOOP_BRANCH, SCOOP_REPO}|\n|`$global`|如果安装时使用了 `-g` 或 `--global`，则为 `$true`|\n|`$manifest`|反序列化清单(PowerShell 对象)，如 @{version=1.2.3; description=xxx;...}|\n|`$version`|正在安装的版本，如 1.2.3|\n|`$dir`|应用程序安装目录(实际版本号目录)|\n|`$persist_dir`|数据持久化目录|\n|`$bucketsdir`|Scoop buckets 目录，如 D:\\scoop\\buckets|\n|`$bucket`|当前安装应用所属于的 bucket 名称|\n|`$cachedir`|Scoop cache 目录|\n|`$configFile`|Scoop 配置的路径|\n|`$globaldir`|全局安装目录|\n|`$modulesdir`|Scoop modules 目录|\n|`$original_dir`|应用程序安装目录(实际版本号目录)|\n|`$scoopdir`|Scoop 所在目录|",
+      "markdownDescription": "- 用于在卸载应用程序之前执行命令\n- 执行顺序: `pre_uninstall` -> `uninstaller` -> `post_uninstall`\n\n|可用的变量|说明|\n|:-:|-|\n|`$app`|应用程序名称(应用清单名称)|\n|`$architecture`|CPU 架构, 如: `64bit` `32bit` `arm64`|\n|`$cmd`|当前正在运行的子命令, 如: `uninstall` `update` `install`|\n|`$fname`|下载的文件名(可能是多个文件，需要当做数组处理，除非你确定 url 不是数组)|\n|`$scoopConfig`|Scoop 配置(PowerShell 对象)，如 {SCOOP_BRANCH, SCOOP_REPO}|\n|`$global`|如果安装时使用了 `-g` 或 `--global`，则为 `$true`|\n|`$manifest`|反序列化清单(PowerShell 对象)，如 @{version=1.2.3; description=xxx;...}|\n|`$version`|正在安装的版本，如 1.2.3|\n|`$dir`|应用程序安装目录(实际版本号目录)|\n|`$persist_dir`|数据持久化目录|\n|`$bucketsdir`|Scoop buckets 目录，如 D:\\scoop\\buckets|\n|`$bucket`|当前安装应用所属于的 bucket 名称|\n|`$cachedir`|Scoop cache 目录|\n|`$configFile`|Scoop 配置的路径|\n|`$globaldir`|全局安装目录|\n|`$original_dir`|应用程序安装目录(实际版本号目录)|\n|`$scoopdir`|Scoop 所在目录|",
       "$ref": "#/definitions/string_or_string_array"
     },
     "uninstaller": {
@@ -687,7 +687,7 @@
     },
     "post_uninstall": {
       "title": "后卸载脚本",
-      "markdownDescription": "- 用于在卸载应用程序之后执行命令\n- 执行顺序: `pre_uninstall` -> `uninstaller` -> `post_uninstall`\n\n|可用的变量|说明|\n|:-:|-|\n|`$app`|应用程序名称(应用清单名称)|\n|`$architecture`|CPU 架构, 如: `64bit` `32bit` `arm64`|\n|`$cmd`|当前正在运行的子命令, 如: `uninstall` `update` `install`|\n|`$fname`|下载的文件名(可能是多个文件，需要当做数组处理，除非你确定 url 不是数组)|\n|`$scoopConfig`|Scoop 配置(PowerShell 对象)，如 {SCOOP_BRANCH, SCOOP_REPO}|\n|`$global`|如果安装时使用了 `-g` 或 `--global`，则为 `$true`|\n|`$manifest`|反序列化清单(PowerShell 对象)，如 @{version=1.2.3; description=xxx;...}|\n|`$version`|正在安装的版本，如 1.2.3|\n|`$dir`|应用程序安装目录(current 目录)|\n|`$persist_dir`|数据持久化目录|\n|`$bucketsdir`|Scoop buckets 目录，如 D:\\scoop\\buckets|\n|`$bucket`|当前安装应用所属于的 bucket 名称|\n|`$cachedir`|Scoop cache 目录|\n|`$configFile`|Scoop 配置的路径|\n|`$globaldir`|全局安装目录|\n|`$modulesdir`|Scoop modules 目录|\n|`$original_dir`|应用程序安装目录(实际版本号目录)|\n|`$scoopdir`|Scoop 所在目录|",
+      "markdownDescription": "- 用于在卸载应用程序之后执行命令\n- 执行顺序: `pre_uninstall` -> `uninstaller` -> `post_uninstall`\n\n|可用的变量|说明|\n|:-:|-|\n|`$app`|应用程序名称(应用清单名称)|\n|`$architecture`|CPU 架构, 如: `64bit` `32bit` `arm64`|\n|`$cmd`|当前正在运行的子命令, 如: `uninstall` `update` `install`|\n|`$fname`|下载的文件名(可能是多个文件，需要当做数组处理，除非你确定 url 不是数组)|\n|`$scoopConfig`|Scoop 配置(PowerShell 对象)，如 {SCOOP_BRANCH, SCOOP_REPO}|\n|`$global`|如果安装时使用了 `-g` 或 `--global`，则为 `$true`|\n|`$manifest`|反序列化清单(PowerShell 对象)，如 @{version=1.2.3; description=xxx;...}|\n|`$version`|正在安装的版本，如 1.2.3|\n|`$dir`|应用程序安装目录(current 目录)|\n|`$persist_dir`|数据持久化目录|\n|`$bucketsdir`|Scoop buckets 目录，如 D:\\scoop\\buckets|\n|`$bucket`|当前安装应用所属于的 bucket 名称|\n|`$cachedir`|Scoop cache 目录|\n|`$configFile`|Scoop 配置的路径|\n|`$globaldir`|全局安装目录|\n|`$original_dir`|应用程序安装目录(实际版本号目录)|\n|`$scoopdir`|Scoop 所在目录|",
       "$ref": "#/definitions/string_or_string_array"
     },
     "checkver": {
@@ -785,7 +785,7 @@
     },
     "autoupdate_url": {
       "title": "软件的下载地址",
-      "markdownDescription": "- 它通常是动态的，会包含一些版本变量，如: `$version` 等\n- 例如: `https://github.com/owner/repo/releases/download/v$version/xxx.exe`",
+      "markdownDescription": "- 它通常是动态的，会包含一些 [版本变量](https://github.com/ScoopInstaller/Scoop/wiki/App-Manifest-Autoupdate#version-variables)，参考 `autoupdate` 字段的悬停提示\n- 例如: `https://github.com/owner/repo/releases/download/v$version/xxx.exe`\n- 如果有多个 URL，可以使用数组\n```json\n  \"url\": [\n      \"http://example.com/file1.zip\",\n      \"http://example.com/file2.zip\"\n  ]\n  ```\n- 如果需要更改下载 URL 的文件名，可以在 URL 结尾加上 `#/dl.7z`，例如:\n```json\n  \"url\": \"http://example.org/program.exe#/dl.7z\"\n  ```\n- Scoop 将下载 program.exe ，但将其保存为 dl.7z ，然后将使用 7-Zip 自动提取",
       "type": ["string", "array"],
       "examples": ["", []],
       "minLength": 1,
@@ -1092,7 +1092,7 @@
     },
     "autoupdate": {
       "title": "自动更新",
-      "markdownDescription": "- 它将通过 [Github Actions](https://github.com/ScoopInstaller/GithubActions) 去自动更新清单\n - Scoop 允许使用 `scoop install AppName@1.2.3` 安装特定版本\n - 但前提是，清单文件中 `autoupdate` 的所有 `url` 只能包含以下 [版本变量](https://github.com/ScoopInstaller/Scoop/wiki/App-Manifest-Autoupdate#version-variables)\n    - `$version`\n    - `$majorVersion`,`$minorVersion`,`$patchVersion`,`$buildVersion`,`$preReleaseVersion`\n    - `$dotVersion`,`$dashVersion`,`$underscoreVersion`,`$cleanVersion`\n    - `$matchHead`,`$matchTail`",
+      "markdownDescription": "- 它将通过 [Github Actions](https://github.com/ScoopInstaller/GithubActions) 去自动更新清单\n - Scoop 允许使用 `scoop install AppName@1.2.3` 安装特定版本\n - 但前提是，清单文件中 `autoupdate` 的所有 `url` 只能包含以下 [版本变量](https://github.com/ScoopInstaller/Scoop/wiki/App-Manifest-Autoupdate#version-variables)\n  - `$version`: `3.7.1.2-rc.1`\n    - `$majorVersion`: `3`\n    - `$minorVersion`: `7`\n    - `$patchVersion`: `1`\n    - `$buildVersion`: `2`\n    - `$preReleaseVersion`: `rc.1`\n  - `$dotVersion`: `3.7.1.2.rc.1`\n  - `$dashVersion`: `3-7-1-2-rc-1`\n  - `$underscoreVersion`: `3_7_1_2_rc_1`\n  - `$cleanVersion`: `3712rc1`\n  - `$matchHead`: `3.7.1`\n  - `$matchTail`: `.2-rc.1`",
       "type": "object",
       "minProperties": 1,
       "examples": [
@@ -1279,7 +1279,7 @@
                         "not": {
                           "const": "github"
                         },
-                        "errorMessage": "url 不是标准的 Github Releases，不能使用 github"
+                        "errorMessage": "url 不是标准的 Github Releases"
                       }
                     }
                   }
