chore: update vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,20 @@
 {
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.formatOnSave": true,
-  "filename-lint.enabled": true,
-  "filename-lint.excludePatterns": [
-    "**/schemas/*.json",
-    "readme.*.md",
-    "schema-list.*.md"
-  ]
+    "[json]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode",
+        "prettier.printWidth": 0,
+        "prettier.tabWidth": 4
+    },
+    "[jsonc]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode",
+        "prettier.printWidth": 0,
+        "prettier.tabWidth": 4
+    },
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true,
+    "filename-lint.enabled": true,
+    "filename-lint.excludePatterns": [
+        "**/schemas/*.json",
+        "readme.*.md",
+        "schema-list.*.md"
+    ]
 }
